data/all_generated_tests/raw_wast_tests/unreachable_ImproperFunctionCallorReturnHandling_1448.wast
;; 9. **Test Description:**     Validate the case where `unreachable` is used in the middle of a chain of `call_indirect` instructions, ensuring type checks and traps even if the indirect calls have complex interdependencies.    **Constraint Checked:** Type integrity and proper trapping amidst indirect calls.    **Relation to Improper Call/Return Handling:** Ensures no erroneous function calls and correct trap handling in indirect call chains.

(assert_invalid
  (module
    (type $ft (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $ft)
    (func (unreachable) (call_indirect (type $ft) (i32.const 0) (i32.const 0)))
  )
  "type mismatch"
)